--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-template",
-  "version": "0.0.2",
+  "name": "stock-visualizer",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
