--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^4.11.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "yahoo-finance2": "^2.8.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
