--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@vercel/analytics": "^1.0.2",
     "class-variance-authority": "^0.4.0",
@@ -32,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "sharp": "^0.31.3",
+    "swr": "^2.2.4",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "yahoo-finance2": "^2.8.0"
