--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "recharts": "^2.8.0",
     "sharp": "^0.31.3",
     "swr": "^2.2.4",
     "tailwind-merge": "^1.13.2",
